compiler/testData/asJava/lightClasses/compilationErrors/AnnotationModifiers.java
public final class A /* A*/ {
  @kotlin.jvm.Transient()
  @kotlin.jvm.Volatile()
  private transient volatile java.lang.String c;

  @kotlin.jvm.Strictfp()
  @kotlin.jvm.Synchronized()
  public final synchronized strictfp void f();//  f()

  @null()
  public  A();//  .ctor()

  @org.jetbrains.annotations.NotNull()
  public final java.lang.String getC();//  getC()

  public final void setC(@org.jetbrains.annotations.NotNull() java.lang.String);//  setC(java.lang.String)

}